--- a/doqmeat/scrapbook/body.css
+++ b/doqmeat/scrapbook/body.css
@@ -2,7 +2,7 @@
 	--fonts: gaegu-l, ms pgothic, arial;
 	--blue: #8dd1f1;
 	--pink: #ecbad0;
-	--yellow: #ecdf8c;
+	--yellow: #faf2be;
 	--green: #a6d898;
 	--black: #4c4c4c;
 }
