site box change

--- a/doqmeat/elements.css
+++ b/doqmeat/elements.css
@@ -2,7 +2,7 @@
 	text-align: center;
 	background-color: #c2e2ea;
 	background-size: cover;
-	background-image: url(https://doqmeat.nekoweb.org/doqmeat.nekoweb.org/!g/web/site-box-bg.png);
+	background-image: url(https://doqmeat.nekoweb.org/doqmeat.com/!g/web/site-box-bg.png);
 	color: #ab3a22;
 	font-size: 17px;
 	border-radius: 10px;
@@ -11,7 +11,7 @@
 	opacity: 0;
 }
 .site-box .sitefeature {
-	background-image: url(https://doqmeat.nekoweb.org/doqmeat.nekoweb.org/!g/web/site-box-cat.png);
+	background-image: url(https://doqmeat.nekoweb.org/doqmeat.com/!g/web/site-box-cat.png);
 	background-position: center;
 	background-color: transparent;
 	border: 0;
