--- a/doqmeat/layouts/info.html
+++ b/doqmeat/layouts/info.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="/!g/pix/puter.gif" type="image/x-icon">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/info/style.css">
   <link rel="stylesheet" href="/fonts/stylesheet.css">
   <title>info</title>
 </head>
@@ -41,7 +41,7 @@
     </main>
     <!-- footer -->
     <footer>
-      <p><b>last updated on 11.jul.25</b></p>
+      <p><b>last updated on <!--# block name="updated" -->30.jan.26<!--# endblock --></b></p>
       <p><b>credit:</b> body bg from <a href="https://unsplash.com/@javchz?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Javier Garcia Chavez</a> on <a href="https://unsplash.com/photos/vast-green-field-under-a-dramatic-cloudy-sky-4uTaNeCMYVI?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>, <a href="/notebook/resources/fonts.html">fonts</a> used: mononoki, dotgothic16.</p>
     </footer>
   </div>
