okay this should be done now

--- a/doqmeat/layouts/info.html
+++ b/doqmeat/layouts/info.html
@@ -26,7 +26,7 @@
         <li><a href="index.html">info</a></li>
         <li><a href="git.html">git updates</a></li>
         <li><a href="credit.html">credit</a></li>
-        <li><a href="inspiration.html">inspiration</a></li>
+        <li><a href="insp.html">inspiration</a></li>
       </ul>
       <h3>archives</h3>
       <ul>
