--- a/doqmeat/layouts/info.html
+++ b/doqmeat/layouts/info.html
@@ -18,21 +18,21 @@
     <nav>
       <h2>navigation</h2>
       <ul>
-        <li><a href="/">go back</a></li>
+        <li><a href="/">homepage</a></li>
         <li><a href="/sitemap">sitemap</a></li>
       </ul>
       <h3>sitely</h3>
       <ul>
-        <li><a href="index.html">info</a></li>
-        <li><a href="git.html">git updates</a></li>
-        <li><a href="credit.html">credit</a></li>
-        <li><a href="insp.html">inspiration</a></li>
+        <li><a href="/info/index.html">info</a></li>
+        <li><a href="/info/git.html">git updates</a></li>
+        <li><a href="/info/credit.html">credit</a></li>
+        <li><a href="/info/insp.html">inspiration</a></li>
       </ul>
       <h3>archives</h3>
       <ul>
-        <li><a href="past-homepages.html">homepages</a></li>
-        <li><a href="past-layouts.html">layouts</a></li>
-        <li><a href="updates.html">updates</a></li>
+        <li><a href="/info/past-homepages.html">homepages</a></li>
+        <li><a href="/info/past-layouts.html">layouts</a></li>
+        <li><a href="/info/updates.html">updates</a></li>
       </ul>
 
     </nav>
