--- a/doqmeat/layouts/info.html
+++ b/doqmeat/layouts/info.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="/info/style.css">
   <link rel="stylesheet" href="/fonts/stylesheet.css">
   <title>info</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+  <script src="/!f/tooltip-jquary.js"></script>
+  <script src="/!f/tooltip.js"></script>
 </head>
 
 <body>
