--- a/doqmeat/faq/body.css
+++ b/doqmeat/faq/body.css
@@ -4,7 +4,10 @@
 
 body {
 	background: url("/!g/bg/ritva-1.gif");
-	font-family: gaegu-r, ms pgothic, arial;
+	font-family:
+		gaegu-r,
+		ms pgothic,
+		arial;
 	font-size: 19px;
 	text-shadow: 2px 2px 3px #ffffff;
 }
@@ -22,9 +25,13 @@ main {
 	margin-bottom: -10px;
 	padding: 10px;
 	max-width: 600px;
-	border: 5px double #dcf2ed;
+	border: 5px double #6d4949;
 	border-top: 0px;
 	border-bottom: 0px;
+}
+
+a {
+	color: rgb(123, 64, 64);
 }
 
 summary {
