--- a/doqmeat/tv/index.css
+++ b/doqmeat/tv/index.css
@@ -149,19 +149,30 @@ main {
 		margin: 0 10px;
 		padding: 0;
 	}
+	p.date {
+		border-top: 1px dashed var(--purple);
+	}
 }
 
 dl {
 	text-align: left;
+	img.poster {
+		border-radius: 5px;
+		max-width: 40%;
+		float: left;
+		margin: 10px;
+	}
 	dt {
+		font-size: 1.4rem;
 		text-decoration-line: underline;
-		text-underline-offset: -10px;
+		text-underline-offset: -1.1rem;
 		text-decoration-thickness: 0.9em;
 		text-decoration-skip-ink: none;
 		text-decoration-color: whitesmoke;
 	}
 	dd {
-		padding: 5px 5px 5px 30px;
+		display: flow-root;
+		padding: 5px;
 		margin: 0;
 		&::before {
 			content: "🗪 ";
@@ -199,7 +210,8 @@ dl {
 	margin: 10px;
 }
 
-.box p:hover {
+.box p:hover,
+.box dd:hover {
 	background: white;
 	border-radius: 10px;
 }
@@ -261,6 +273,7 @@ aside {
 	background-size: 13px;
 	background-color: #a6d0c8;
 	padding: 10px;
+	border: 5px ridge var(--green);
 
 	.feed-title {
 		display: none;
@@ -270,7 +283,7 @@ aside {
 		display: block;
 		margin: auto;
 		width: 50%;
-		filter: saturate(0.6);
+		filter: saturate(0.3);
 		transition-duration: 1s;
 	}
 
@@ -327,6 +340,11 @@ footer p {
 @media only screen and (max-width: 870px) {
 	main {
 		max-width: 679px;
+	}
+
+	div.log {
+		width: 90%;
+		height: 50vh;
 	}
 
 	aside {
