--- a/doqmeat/reading/body.css
+++ b/doqmeat/reading/body.css
@@ -39,16 +39,23 @@ main {
 }
 
 figure {
+	background: white;
 	text-align: center;
 	border: 1px dashed rgb(239, 117, 117);
+	figcaption {
+		margin: 10px;
+	}
 }
 
 details {
+	border-radius: 10px;
 	display: inline-block;
 	background: rgba(163, 201, 240, 0.415);
 }
 
 li details > summary {
+	border-radius: 10px;
+	padding: 1px 5px 1px 5px;
 	list-style-type: "+";
 }
 
