--- a/doqmeat/info/style.css
+++ b/doqmeat/info/style.css
@@ -151,6 +151,7 @@ header {
 
 footer {
 	background: var(--light-blue);
+	text-transform: lowercase;
 	color: var(--bg);
 	padding: 10px;
 	font-size: 0.8em;
