--- a/doqmeat/elements.css
+++ b/doqmeat/elements.css
@@ -1,26 +1,40 @@
+/*!@nkb "domain":"doqmeat.com","rss":"~/rss.xml","overflow":true,"readonly":false */
+
 .site-box {
+	box-sizing: border-box;
 	text-align: center;
 	background-color: #c2e2ea;
-	background-size: cover;
-	background-image: url(https://doqmeat.nekoweb.org/doqmeat.com/!g/web/site-box-bg.png);
+	background-repeat: repeat;
+	background-image: url(https://doqmeat.nekoweb.org/doqmeat.com/notebook/!g/grid-blue.png);
 	color: #ab3a22;
 	font-size: 17px;
 	border-radius: 10px;
+	border: 1px double #aac6ea;
 }
-.site-box img.screenshot {
-	opacity: 0;
+
+.site-box:hover > a > p:after {
+	rotate: 20deg;
+	transform: scale(1.1);
 }
-.site-box .sitefeature {
-	background-image: url(https://doqmeat.nekoweb.org/doqmeat.com/!g/web/site-box-cat.png);
-	background-position: center;
-	background-color: transparent;
-	border: 0;
-	background-repeat: no-repeat;
-	opacity: 1;
+
+.site-box > a > p:before {
+	z-index: 5;
+	content: url(https://doqmeat.nekoweb.org/doqmeat.com/!g/pix/flower-purple.gif);
+}
+
+.site-box > a > p:after {
+	transition-duration: 1s;
+	position: absolute;
+	z-index: 5;
+	bottom: -30px;
+	right: -10px;
+	content: url(https://doqmeat.nekoweb.org/doqmeat.com/!g/web/site-box-cat.png);
 }
 
 .site-box > a > p {
-	color: #ab3a22;
+	text-align: left;
+	padding: 5px 0 0 20px;
+	color: #5d88c0;
 	text-shadow:
 		1px 1px 4px white,
 		1px 1px 4px white,
